--- a/simple-server/templates/about.tmpl
+++ b/simple-server/templates/about.tmpl
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>Examples</title>
-<meta name='viewport' content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no'/>
-<meta name="description" content="">
-<meta name="keywords" content="">
-<link href="" rel="stylesheet">
-</head>
-<body>
-    About this project
-</body>
-</html>
+{{template "base" .}}
+
+{{define "content"}}
+    <h1>about page23</h1>
+{{end}}
